--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
 <header>
 <div id="inicjaly">
-<p id="inicjaly-p">KK</p>
+<p id="inicjaly-p">MK</p>
 </div>
 <div id="dzwonek">
 <img alt="kropka" id="kropka" src="dowod_files/dzwonek_dot.svg"/>
